FAI-458 - Refactoring trusty infinispan storage: remove not necessary marshallers (#841)
* retrieved decision input components set to null in case of unit type

* refactoring trusty infinispan storage: remove not necessary marshallers

* enable tests

* remove unused imports

* reuse parent mapper in marshallers

* make MarshallerTestTemplate public